--- a/main/resources/assets/gts/lang/en_US.lang
+++ b/main/resources/assets/gts/lang/en_US.lang
@@ -1,4 +1,4 @@
 item.gts:credit.name=Credit
 item.gts:catalog.name=Catalog
-item.gts:creditCard.name=Credit Card
+item.gts:credit_card.name=Credit Card
 tile.gts:seller.name=Seller
