--- a/main/resources/assets/gts/lang/en_US.lang
+++ b/main/resources/assets/gts/lang/en_US.lang
@@ -3,3 +3,4 @@ item.gts:catalog.name=Catalog
 item.gts:credit_card.name=Credit Card
 item.gts:credit_card2.name=Credit Card Mk. 2
 tile.trader.name=Trader
+itemGroup.gts=Global Trade System
