Ender Update! -added Ender Card and Ender Catalog -Lots of changes to make them work

--- a/main/resources/assets/gts/lang/en_US.json
+++ b/main/resources/assets/gts/lang/en_US.json
@@ -3,6 +3,8 @@
     "item.gts.credit":"Credit",
     "item.gts.credit_card":"Credit Card",
     "item.gts.credit_card2":"Credit Card 2",
+    "item.gts.ender_card":"Ender Card",
+    "item.gts.ender_catalog":"Ender Catalog",
     "itemGroup.gts":"Global Trade System",
     "block.gts.trader":"Trader",
     "block.gts.power_plant":"Power Plant"
